css update links to be underlined

--- a/resources/style.css
+++ b/resources/style.css
@@ -44,6 +44,7 @@ nav ul li{
     padding-right: 4%;
     display: inline-block;
     font-size: xx-large;
+    text-decoration: underline;
     
 }
 
