--- a/resources/style.css
+++ b/resources/style.css
@@ -1,3 +1,8 @@
+:root{
+    --text-color: cornsilk;
+    --img-px-size: 100px;
+}
+
 *{
     box-sizing: border-box;
     padding: 0;
@@ -8,14 +13,20 @@
 
 body {
     background-color: rgb(53, 52, 52);
-    color: cornsilk;
+    color: var(--text-color);
 }
 
 img {
-    max-width:  100px;
-    max-height: 100px;
-    min-width: 100px;
-    min-height: 100px;
+    opacity: 55%;
+    transition: opacity 1s;
+    max-width:  var(--img-px-size);
+    max-height: var(--img-px-size);
+    min-width: var(--img-px-size);
+    min-height: var(--img-px-size);
+}
+
+img:hover{
+    opacity: 100%;
 }
 
 #python_logo {
@@ -26,32 +37,36 @@ img {
 #solidity_logo{
     padding-left: 10px;
     min-width: 1px;
-    min-height: 100px;
+    min-height: var(--img-px-size);
     max-width: none;
-    max-height: 100px;
+    max-height: var(--img-px-size);
 }
 
-nav {
+header {
     padding: 2%;
     text-align: center;
-    color: cornsilk;
+    color: var(--text-color);
 }
 
-nav ul li{
+header ul li{
     padding: 2%;
     padding-bottom: 5%;
-    padding-left: 4%;
-    padding-right: 4%;
     display: inline-block;
     font-size: xx-large;
     text-decoration: underline;
+    
     
 }
 
 a{
     justify-content: center;
-    color: cornsilk;
+    color: var(--text-color);
     text-decoration: none;
+    transition: font-size .5s;
+}
+
+a:hover{
+    font-size: 110%;
 }
 
 .article {
