--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,9 @@
+/* Create root attribute and set CSS variables */
 :root{
     --text-color: cornsilk;
     --img-px-size: 100px;
 }
-
+/*  Sets base styling for HTML doc */
 *{
     box-sizing: border-box;
     padding: 0;
@@ -10,12 +11,12 @@
     margin-left: .15%;
     
 }
-
+/*  Styling ofr the body of the web page */
 body {
     background-color: rgb(53, 52, 52);
     color: var(--text-color);
 }
-
+/*  Default styling for images */
 img {
     opacity: 55%;
     transition: opacity 1s;
@@ -24,16 +25,16 @@ img {
     min-width: var(--img-px-size);
     min-height: var(--img-px-size);
 }
-
+/*  Adds a hover action to images */
 img:hover{
     opacity: 100%;
 }
-
+/* Sets the python logo image size */
 #python_logo {
     min-width: 300px;
     min-height: 300px;
 } 
-
+/* Sets solidity logo sizing */
 #solidity_logo{
     padding-left: 10px;
     min-width: 1px;
@@ -41,13 +42,13 @@ img:hover{
     max-width: none;
     max-height: var(--img-px-size);
 }
-
+/* Styling for header element */
 header {
     padding: 2%;
     text-align: center;
     color: var(--text-color);
 }
-
+/* Defines the list styling inside the header and ul */
 header ul li{
     padding: 2%;
     padding-bottom: 5%;
@@ -57,28 +58,28 @@ header ul li{
     
     
 }
-
+/* Styling for a */
 a{
     justify-content: center;
     color: var(--text-color);
     text-decoration: none;
     transition: font-size .5s;
 }
-
+/* Adds hover action to a */
 a:hover{
     font-size: 110%;
 }
-
+/* Base styling ofr article class */
 .article {
  padding-top: 5%;
  padding-bottom: 5%;
 }
-
+/* Footer styling */
 footer{
     padding-bottom: 2%;
     text-align: center;
 }
-
+/* Sets the span styling inside the footer */
 footer span{
     font-size: 80%;
 }
