--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -53,7 +53,7 @@ header ul li{
     padding: 2%;
     padding-bottom: 5%;
     display: inline-block;
-    font-size: xx-large;
+    font-size: x-large;
     text-decoration: underline;
     
     
