--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -87,6 +87,11 @@ a{
 a:hover{
     font-size: 110%;
 }
+
+.github-link{
+    text-decoration: underline;
+}
+
 /* Base styling ofr article class */
 .article {
  padding-top: 5%;
